<resources>
    <string name="app_name">FirstQuestion</string>
    <string name="name">Name</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome,</string>
    <string name="user">User</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="username">Username</string>
    <string name="email">email</string>
    <string name="user_image">User Image</string>
    <string name="retry">Retry</string>
    <string name="palindrome">Palindrome</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
</resources>