<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".ui.FirstScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:src="@drawable/img_1"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/name"
            android:layout_marginTop="58dp"
            android:paddingStart="16dp"
            android:inputType="textNoSuggestions"
            android:paddingEnd="32dp"
            android:background="@drawable/edit_text_background"/>

        <EditText
            android:id="@+id/et_palindrome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="22dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:hint="@string/palindrome"
            android:inputType="textNoSuggestions"
            android:background="@drawable/edit_text_background"/>

        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:background="@drawable/button_background"
            android:text="@string/check" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:background="@drawable/button_background"
            android:text="@string/next" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>